# crank

./: .coveragerc  .env.example  .gitignore  LICENSE  README.md  main.py  orchastrator.py  orchestrator.py  preset.yml  prompt.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
caption/: __init__.py  caption.py  stt.py
docs/: PLUGIN_GUIDE.md
media/: downloader.py  processor.py  scraper.py
plugins/: __init__.py
plugins/default/: plugin.py  processor.py  scraper.py  utils.py
preset/: __init__.py  yml_handler.py
prompt/: prompt.py
response/: __init__.py  gemini.py
src/: __init__.py
src/caption/: caption.py  stt.py
src/core/: __init__.py  app.py  orchestrator.py
src/media/: processor.py  scraper.py
src/plugins/: __init__.py  base.py  registry.py
src/preset/: yml_handler.py
src/prompt/: prompt.py
src/response/: gemini.py
src/utils/: colors.py  constants.py
src/video/: editor.py
src/youtube/: uploader.py
tests/: README.md  __init__.py  conftest.py  test_caption.py  test_editor.py  test_gemini.py  test_main.py  test_main_cli.py  test_orchestrator.py  test_plugin_data_flow.py  test_prompt.py  test_prompt_injection.py  test_uploader.py  test_yml_handler.py
utils/: constants.py
video/: editor.py
youtube/: uploader.py
